<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menuDownloads"
        android:icon="@drawable/ic_download"
        android:title="@string/downloads"/>

    <group>
        <item android:title="@string/others">
            <menu>
                <item
                    android:id="@+id/menuShare"
                    android:icon="@drawable/ic_share"
                    android:title="@string/share"/>
                <item
                    android:id="@+id/menuFeedback"
                    android:icon="@drawable/ic_feedback"
                    android:title="@string/feedback"/>
                <item
                    android:id="@+id/menuRequestFeature"
                    android:icon="@drawable/ic_feature"
                    android:title="@string/request_feature"/>
                <item
                    android:id="@+id/menuReportBugs"
                    android:icon="@drawable/ic_bugs"
                    android:title="@string/report_bugs"/>
            </menu>
        </item>
    </group>
</menu>