<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:paddingTop="20dp"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <LinearLayout
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/openAsVideo"
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/open_as_video_s"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/videoCountView"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/openLastVideo"
        android:padding="20dp"
        android:textSize="16sp"
        android:text="@string/open_last_video"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/openAsMusic"
        android:padding="20dp"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:textSize="16sp"
            android:layout_weight="1"
            android:text="@string/open_as_music"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/musicCountView"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:text="0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <TextView
        android:foreground="?android:attr/selectableItemBackground"
        android:clickable="true"
        android:focusable="true"
        android:id="@+id/openLastMusic"
        android:padding="20dp"
        android:textSize="16sp"
        android:text="@string/open_last_music"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>